--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vue-chords-detector",
+  "homepage": "https://pmanikas.github.io/guitar-tuner",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +11,7 @@
   "dependencies": {
     "component-emitter": "^1.3.0",
     "core-js": "^3.6.5",
+    "gh-pages": "^3.1.0",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0"
   },
