--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "vue-chords-detector",
-  "homepage": "https://pmanikas.github.io/guitar-tuner",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "predeploy": "PUBLIC_URL=https://pmanikas.github.io/guitar-tuner npm run build",
-    "deploy": "gh-pages -d dist",
-    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "gh-pages -d dist",
+    "dev": "vue-cli-service serve --open",
+    "predeploy": "PUBLIC_URL=https://pmanikas.github.io/guitar-tuner npm run build"
   },
   "dependencies": {
     "component-emitter": "^1.3.0",
@@ -25,12 +24,19 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-airbnb": "^5.0.2",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
     "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.2"
-  }
+    "prettier": "^2.2.1",
+    "sass-loader": "^10.1.1"
+  },
+  "homepage": "https://pmanikas.github.io/guitar-tuner"
 }
