--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "predeploy": "PUBLIC_URL=https://pmanikas.github.io/guitar-tuner npm run build"
   },
   "dependencies": {
+    "@rocktimsaikia/github-card": "^2.1.1",
     "component-emitter": "^1.3.0",
     "core-js": "^3.6.5",
     "gh-pages": "^3.1.0",
+    "github-card": "^1.2.1",
+    "github-cards": "^1.0.4",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0"
   },
