--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,1 @@
-{"name":"Guitar Tuner","short_name":"Guitar Tuner","theme_color":"#4DBA87","icons":[{"src":"./img/icons/android-chrome-192x192.png","sizes":"192x192","type":"image/png"}],"start_url":".","display":"standalone","background_color":"#000000"}
+{"name":"Guitar Tuner","short_name":"Guitar Tuner","theme_color":"#4DBA87","icons":[{"src":"images/android-chrome-192x192.png","sizes":"192x192","type":"image/png"},{"src":"images/android-chrome-512x512.png","sizes":"512x512","type":"image/png"}],"start_url":".","display":"standalone","background_color":"#000000"}
