--- a/package.json
+++ b/package.json
@@ -1,44 +1,35 @@
 {
-  "name": "vue-chords-detector",
-  "version": "0.1.0",
+  "name": "vue-guitar-tuner-demo",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "deploy": "gh-pages -d dist",
     "dev": "vue-cli-service serve --open",
-    "predeploy": "PUBLIC_URL=https://pmanikas.github.io/guitar-tuner npm run build"
+    "predeploy": "PUBLIC_URL=https://pmanikas.github.io/vue-guitar-tuner-demo npm run build"
   },
   "dependencies": {
-    "@mohayonao/web-audio-api-shim": "^0.3.0",
-    "@rocktimsaikia/github-card": "^2.1.1",
-    "component-emitter": "^1.3.0",
     "core-js": "^3.6.5",
     "gh-pages": "^3.1.0",
     "register-service-worker": "^1.7.1",
-    "vue": "^3.0.0"
+    "vue": "2.6.11",
+    "vue-guitar-tuner": "^1.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-pwa": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
-    "node-sass": "^4.12.0",
     "prettier": "^2.2.1",
-    "sass-loader": "^10.1.1"
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
+    "vue-template-compiler": "2.6.11"
   },
-  "homepage": "https://pmanikas.github.io/guitar-tuner"
+  "homepage": "https://pmanikas.github.io/vue-guitar-tuner-demo"
 }
