--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "gh-pages": "^3.1.0",
     "register-service-worker": "^1.7.1",
     "vue": "2.6.11",
-    "vue-guitar-tuner": "^1.0.2"
+    "vue-guitar-tuner": "1.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
