--- a/package.json
+++ b/package.json
@@ -1,35 +1,33 @@
 {
-  "name": "vue-guitar-tuner-demo",
-  "version": "1.1.0",
-  "private": true,
-  "scripts": {
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "deploy": "gh-pages -d dist",
-    "dev": "vue-cli-service serve --open",
-    "predeploy": "PUBLIC_URL=https://pmanikas.github.io/vue-guitar-tuner-demo npm run build"
-  },
-  "dependencies": {
-    "core-js": "^3.6.5",
-    "gh-pages": "^3.1.0",
-    "register-service-worker": "^1.7.1",
-    "vue": "2.6.11",
-    "vue-guitar-tuner": "1.0.3"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-pwa": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.0.0",
-    "prettier": "^2.2.1",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
-    "vue-template-compiler": "2.6.11"
-  },
-  "homepage": "https://pmanikas.github.io/vue-guitar-tuner-demo"
+    "name": "vue-guitar-tuner-demo",
+    "version": "1.1.0",
+    "private": true,
+    "scripts": {
+        "build": "vue-cli-service build",
+        "lint": "vue-cli-service lint",
+        "dev": "vue-cli-service serve --open"
+    },
+    "dependencies": {
+        "core-js": "^3.6.5",
+        "gh-pages": "^3.1.0",
+        "register-service-worker": "^1.7.1",
+        "vue": "2.6.11",
+        "vue-guitar-tuner": "1.0.3"
+    },
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "~4.5.0",
+        "@vue/cli-plugin-eslint": "~4.5.0",
+        "@vue/cli-plugin-pwa": "~4.5.0",
+        "@vue/cli-service": "~4.5.0",
+        "@vue/eslint-config-prettier": "^6.0.0",
+        "babel-eslint": "^10.1.0",
+        "eslint": "^6.7.2",
+        "eslint-plugin-prettier": "^3.3.1",
+        "eslint-plugin-vue": "^7.0.0",
+        "prettier": "^2.2.1",
+        "sass": "^1.26.5",
+        "sass-loader": "^8.0.2",
+        "vue-template-compiler": "2.6.11"
+    },
+    "homepage": "https://pmanikas.github.io/vue-guitar-tuner-demo"
 }
